--- a/support.html
+++ b/support.html
@@ -1,1 +1,97 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QuantumTech - Quantum Computer</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+</head>
+<body>
 
+<!-- Header with Navigation Bar -->
+<header class="header">
+    <nav class="navbar">
+        <div class="logo">QuantumTech</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">More</a>
+                <div class="dropdown-content">
+                    <a href="blog.html">Blog</a>
+                    <a href="support.html">Support</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<!-- Breadcrumb Navigation -->
+<div class="breadcrumbs">
+    <a href="index.html">Home</a> / <a href="support.html">Support</a>
+</div>
+
+<!-- FAQ Section -->
+<section class="faq-section">
+    <h2>Frequently Asked Questions</h2>
+
+    <details class="faq-item">
+        <summary>How to set up my quantum computer?</summary>
+        <p>Setting up your Quantum Computer involves a few simple steps. First, connect it to a stable power source. Next, connect it to your quantum network using the provided quantum networking cable or via a secure quantum wireless connection. Finally, turn on the device and follow the on-screen setup guide to initialize your quantum processing unit and configure basic settings.</p>
+    </details>
+
+    <details class="faq-item">
+        <summary>Where do I purchase a Quant Comp Pro?</summary>
+        <p>The Quant Comp Pro can be purchased directly from our QuantumTech website or through authorized retailers. We recommend buying from official sources to ensure you receive the full warranty and customer support services. Check our online store for current pricing and availability, or visit a local certified retailer for a hands-on experience before purchase.</p>
+    </details>
+
+    <details class="faq-item">
+        <summary>What is the difference from a regular computer?</summary>
+        <p>Quantum computers, like the Quant Comp Pro, differ significantly from regular computers in their processing capabilities. While traditional computers use bits (0s and 1s) for processing information, quantum computers use quantum bits or qubits, which can exist in multiple states simultaneously. This allows quantum computers to perform complex computations much faster than their classical counterparts, especially in fields like cryptography, material science, and complex algorithm processing.</p>
+    </details>
+
+    <details class="faq-item">
+        <summary>What does quantum mean?</summary>
+        <p>In the context of quantum computing, 'quantum' refers to the fundamental behavior of particles at the smallest scales of energy levels in quantum mechanics. Quantum computers leverage principles like superposition and entanglement to perform operations. Superposition allows quantum bits (qubits) to be in multiple states simultaneously, while entanglement enables them to be interconnected in ways that amplify computing power and efficiency.</p>
+    </details>
+</section>
+
+<!-- Enhanced Contact Form -->
+<section class="contact-section">
+    <h2>Contact Support</h2>
+    <form action="submit_support_query.php" method="post">
+        <!-- Existing form elements... -->
+        <textarea name="message" placeholder="Describe your issue..."></textarea>
+        <input type="submit" value="Send">
+    </form>
+</section>
+
+<!-- Reviews Section -->
+<section class="reviews-section">
+    <h2>Hear from our customers</h2>
+    <div class="review-item">
+        <div class="review-stars">
+            <img src="images/five%20stars.png" alt="5 Star Rating">
+        </div>
+        <div class="review-text">
+            <p>"QuantumTech changed my computing experience! Absolutely amazing performance." - Google CEO</p>
+        </div>
+    </div>
+    <div class="review-item">
+        <div class="review-stars">
+            <img src="images/five%20stars.png" alt="5 Star Rating">
+        </div>
+        <div class="review-text">
+            <p>"Incredible speed and efficiency, probably the best in market. highly recommend QuantumTech computers." - Drake</p>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+    <p>For more information or inquiries, please contact me at <a href="mailto:bellin.riley@titans.easternflorida.edu">bellin.riley@titans.easternflorida.edu</a>.</p>
+    <p>&copy; 2023 QuantumTech. All rights reserved. (Not Really)</p>
+</footer>
+
+</body>
+</html>
