--- a/support.html
+++ b/support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuantumTech - Quantum Computer</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -71,7 +71,7 @@
     <h2>Hear from our customers</h2>
     <div class="review-item">
         <div class="review-stars">
-            <img src="images/five%20stars.png" alt="5 Star Rating">
+            <img src="five%20stars.png" alt="5 Star Rating">
         </div>
         <div class="review-text">
             <p>"QuantumTech changed my computing experience! Absolutely amazing performance." - Google CEO</p>
@@ -79,7 +79,7 @@
     </div>
     <div class="review-item">
         <div class="review-stars">
-            <img src="images/five%20stars.png" alt="5 Star Rating">
+            <img src="five%20stars.png" alt="5 Star Rating">
         </div>
         <div class="review-text">
             <p>"Incredible speed and efficiency, probably the best in market. highly recommend QuantumTech computers." - Drake</p>
