--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <div class="features-grid">
         <!-- Feature Item 1 -->
         <div class="feature-item">
-            <img src="images/Quant%20Comp%20Concept.jpeg" alt="Feature 1">
+            <img src="Quant%20Comp%20Concept.jpeg" alt="Feature 1">
         </div>
         <!-- Feature Item 2 -->
         <div class="feature-item-two">
-            <img src="images/Quant%20Comp%20Space%20Black.png" alt="Feature 2">
+            <img src="Quant%20Comp%20Space%20Black.png" alt="Feature 2">
         </div>
     </div>
     <div class="featuredesc">
@@ -62,22 +62,22 @@
     <div class="features-grid-small">
         <!-- Small Feature Item 1 -->
         <div class="feature-item-small">
-            <img src="images/misc.svg" alt="Feature 3">
+            <img src="misc.svg" alt="Feature 3">
             <div class="feature-text-small">Multi Functional Processing</div>
         </div>
         <!-- Small Feature Item 2 -->
         <div class="feature-item-small">
-            <img src="images/misc%202.svg" alt="Feature 4">
+            <img src="misc%202.svg" alt="Feature 4">
             <div class="feature-text-small">Sponsered by Apple Technology</div>
         </div>
         <!-- Small Feature Item 3 -->
         <div class="feature-item-small">
-            <img src="images/misc3.svg" alt="Feature 5">
+            <img src="misc3.svg" alt="Feature 5">
             <div class="feature-text-small">43 Quantum Performance Threads</div>
         </div>
         <!-- Small Feature Item 4 -->
         <div class="feature-item-small">
-            <img src="images/misc4.svg" alt="Feature 6">
+            <img src="misc4.svg" alt="Feature 6">
             <div class="feature-text-small">15km Connection Capabilities</div>
         </div>
     </div>
@@ -127,9 +127,9 @@
     <h2>Power and Portability</h2>
     <div class="gallery-grid">
         <!-- Gallery Images -->
-        <img src="images/Quant%20Comp%20Use%20Case.jpeg" alt="Quantum Computer Image 1" class="gallery-item">
-        <img src="images/Quant%20Comp%20Use%20Case%20Two.jpeg" alt="Quantum Computer Image 2" class="gallery-item">
-        <img src="images/Quant%20Comp%20To%20Go.jpeg" alt="Quantum Computer Image 3" class="gallery-item">
+        <img src="Quant%20Comp%20Use%20Case.jpeg" alt="Quantum Computer Image 1" class="gallery-item">
+        <img src="Quant%20Comp%20Use%20Case%20Two.jpeg" alt="Quantum Computer Image 2" class="gallery-item">
+        <img src="Quant%20Comp%20To%20Go.jpeg" alt="Quantum Computer Image 3" class="gallery-item">
         <!-- Additional images can be added here -->
     </div>
 </section>
